ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pearl
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - pearl.demo.dev.sspcloud.fr
  rules:
    - host: pearl.demo.dev.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: pearl
              servicePort: http
